--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fantasy_4339663_1280">
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,7 +39,62 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/Button_8"
+        android:id="@+id/button_clear"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/layout_marginStart_button"
+        android:text="C"
+        android:textColor="@android:color/background_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_10"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_0" />
+
+    <Button
+        android:id="@+id/button_10"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:textColor="@android:color/background_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_11"
+        app:layout_constraintStart_toEndOf="@+id/button_clear"
+        app:layout_constraintTop_toBottomOf="@+id/button_coma"/>
+
+    <Button
+        android:id="@+id/button_11"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:textColor="@android:color/background_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_12"
+        app:layout_constraintStart_toEndOf="@+id/button_10"
+        app:layout_constraintTop_toBottomOf="@+id/button_equals"/>
+
+    <Button
+        android:id="@+id/button_12"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:textColor="@android:color/background_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_11"
+        app:layout_constraintTop_toBottomOf="@+id/button_division"/>
+
+    <Button
+        android:id="@+id/button_8"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -46,13 +103,13 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Button_coma"
-        app:layout_constraintEnd_toStartOf="@+id/Button_9"
-        app:layout_constraintStart_toEndOf="@+id/Button_7"
-        app:layout_constraintTop_toBottomOf="@+id/Button_5" />
+        app:layout_constraintBottom_toTopOf="@+id/button_coma"
+        app:layout_constraintEnd_toStartOf="@+id/button_9"
+        app:layout_constraintStart_toEndOf="@+id/button_7"
+        app:layout_constraintTop_toBottomOf="@+id/button_5" />
 
     <Button
-        android:id="@+id/Button_1"
+        android:id="@+id/button_1"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -64,13 +121,13 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Button_4"
-        app:layout_constraintEnd_toStartOf="@+id/Button_2"
+        app:layout_constraintBottom_toTopOf="@+id/button_4"
+        app:layout_constraintEnd_toStartOf="@+id/button_2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/Button_2"
+        android:id="@+id/button_2"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -80,13 +137,13 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Button_5"
-        app:layout_constraintEnd_toStartOf="@+id/Button_3"
-        app:layout_constraintStart_toEndOf="@+id/Button_1"
+        app:layout_constraintBottom_toTopOf="@+id/button_5"
+        app:layout_constraintEnd_toStartOf="@+id/button_3"
+        app:layout_constraintStart_toEndOf="@+id/button_1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/Button_4"
+        android:id="@+id/button_4"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -96,13 +153,13 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Button_7"
-        app:layout_constraintEnd_toStartOf="@+id/Button_5"
+        app:layout_constraintBottom_toTopOf="@+id/button_7"
+        app:layout_constraintEnd_toStartOf="@+id/button_5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Button_1" />
+        app:layout_constraintTop_toBottomOf="@+id/button_1" />
 
     <Button
-        android:id="@+id/Button_5"
+        android:id="@+id/button_5"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -111,13 +168,13 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Button_8"
-        app:layout_constraintEnd_toStartOf="@+id/Button_6"
-        app:layout_constraintStart_toEndOf="@+id/Button_4"
-        app:layout_constraintTop_toBottomOf="@+id/Button_2" />
+        app:layout_constraintBottom_toTopOf="@+id/button_8"
+        app:layout_constraintEnd_toStartOf="@+id/button_6"
+        app:layout_constraintStart_toEndOf="@+id/button_4"
+        app:layout_constraintTop_toBottomOf="@+id/button_2" />
 
     <Button
-        android:id="@+id/Button_7"
+        android:id="@+id/button_7"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -127,13 +184,13 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Button_0"
-        app:layout_constraintEnd_toStartOf="@+id/Button_8"
+        app:layout_constraintBottom_toTopOf="@+id/button_0"
+        app:layout_constraintEnd_toStartOf="@+id/button_8"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Button_4" />
+        app:layout_constraintTop_toBottomOf="@+id/button_4" />
 
     <Button
-        android:id="@+id/Button_3"
+        android:id="@+id/button_3"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -143,13 +200,13 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Button_6"
-        app:layout_constraintEnd_toStartOf="@+id/Button_plus"
-        app:layout_constraintStart_toEndOf="@+id/Button_2"
+        app:layout_constraintBottom_toTopOf="@+id/button_6"
+        app:layout_constraintEnd_toStartOf="@+id/button_plus"
+        app:layout_constraintStart_toEndOf="@+id/button_2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/Button_6"
+        android:id="@+id/button_6"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -158,13 +215,13 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Button_9"
-        app:layout_constraintEnd_toStartOf="@+id/Button1_multiplication"
-        app:layout_constraintStart_toEndOf="@+id/Button_5"
-        app:layout_constraintTop_toBottomOf="@+id/Button_3" />
+        app:layout_constraintBottom_toTopOf="@+id/button_9"
+        app:layout_constraintEnd_toStartOf="@+id/button1_multiplication"
+        app:layout_constraintStart_toEndOf="@+id/button_5"
+        app:layout_constraintTop_toBottomOf="@+id/button_3" />
 
     <Button
-        android:id="@+id/Button_9"
+        android:id="@+id/button_9"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -173,13 +230,13 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Button_equals"
-        app:layout_constraintEnd_toStartOf="@+id/Button_minus"
-        app:layout_constraintStart_toEndOf="@+id/Button_8"
-        app:layout_constraintTop_toBottomOf="@+id/Button_6" />
+        app:layout_constraintBottom_toTopOf="@+id/button_equals"
+        app:layout_constraintEnd_toStartOf="@+id/button_minus"
+        app:layout_constraintStart_toEndOf="@+id/button_8"
+        app:layout_constraintTop_toBottomOf="@+id/button_6" />
 
     <Button
-        android:id="@+id/Button_0"
+        android:id="@+id/button_0"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -190,12 +247,12 @@
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Button_coma"
+        app:layout_constraintEnd_toStartOf="@+id/button_coma"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Button_7" />
+        app:layout_constraintTop_toBottomOf="@+id/button_7" />
 
     <Button
-        android:id="@+id/Button_coma"
+        android:id="@+id/button_coma"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -205,12 +262,12 @@
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Button_equals"
-        app:layout_constraintStart_toEndOf="@+id/Button_0"
-        app:layout_constraintTop_toBottomOf="@+id/Button_8" />
+        app:layout_constraintEnd_toStartOf="@+id/button_equals"
+        app:layout_constraintStart_toEndOf="@+id/button_0"
+        app:layout_constraintTop_toBottomOf="@+id/button_8" />
 
     <Button
-        android:id="@+id/Button_equals"
+        android:id="@+id/button_equals"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -220,12 +277,12 @@
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Button_division"
-        app:layout_constraintStart_toEndOf="@+id/Button_coma"
-        app:layout_constraintTop_toBottomOf="@+id/Button_9" />
+        app:layout_constraintEnd_toStartOf="@+id/button_division"
+        app:layout_constraintStart_toEndOf="@+id/button_coma"
+        app:layout_constraintTop_toBottomOf="@+id/button_9" />
 
     <Button
-        android:id="@+id/Button_minus"
+        android:id="@+id/button_minus"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -235,13 +292,13 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Button_division"
+        app:layout_constraintBottom_toTopOf="@+id/button_division"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Button_9"
-        app:layout_constraintTop_toBottomOf="@id/Button1_multiplication" />
+        app:layout_constraintStart_toEndOf="@+id/button_9"
+        app:layout_constraintTop_toBottomOf="@id/button1_multiplication" />
 
     <Button
-        android:id="@+id/Button_plus"
+        android:id="@+id/button_plus"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -252,13 +309,13 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Button1_multiplication"
+        app:layout_constraintBottom_toTopOf="@+id/button1_multiplication"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Button_3"
+        app:layout_constraintStart_toEndOf="@+id/button_3"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/Button1_multiplication"
+        android:id="@+id/button1_multiplication"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -268,13 +325,13 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Button_minus"
+        app:layout_constraintBottom_toTopOf="@+id/button_minus"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/Button_9"
-        app:layout_constraintTop_toBottomOf="@+id/Button_plus" />
+        app:layout_constraintStart_toEndOf="@id/button_9"
+        app:layout_constraintTop_toBottomOf="@+id/button_plus" />
 
     <Button
-        android:id="@+id/Button_division"
+        android:id="@+id/button_division"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
@@ -286,7 +343,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Button_equals"
-        app:layout_constraintTop_toBottomOf="@+id/Button_minus" />
+        app:layout_constraintStart_toEndOf="@+id/button_equals"
+        app:layout_constraintTop_toBottomOf="@+id/button_minus" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
