--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,37 +6,39 @@
     android:layout_height="match_parent"
     android:background="@drawable/fantasy_4339663_1280">
 
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="@dimen/layout_height_textView"
         android:layout_height="match_parent"
+        android:background="@android:drawable/screen_background_dark_transparent"
+        android:singleLine="false"
+        android:textAlignment="viewEnd"
+        android:textColor="@android:color/background_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_7"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/layout_height_textView"
-                android:layout_marginStart="@dimen/layout_marginStart_button"
-                android:layout_marginTop="@dimen/layout_marginEnd_button"
-                android:layout_marginEnd="@dimen/layout_marginStart_button"
-                android:layout_marginBottom="@dimen/layout_marginEnd_button"
-                android:background="@android:drawable/screen_background_dark_transparent"
-                android:singleLine="false"
-                android:textAlignment="viewEnd"
-                android:textColor="@android:color/background_light"
-                android:textSize="@dimen/button_textSize"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-    </ScrollView>
+    <Button
+        android:id="@+id/button_1"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/layout_marginStart_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:fontFamily="sans-serif"
+        android:text="1"
+        android:textColor="@android:color/background_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/button_4"
+        app:layout_constraintEnd_toStartOf="@+id/button_2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_clear"
@@ -44,6 +46,8 @@
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
         android:layout_marginStart="@dimen/layout_marginStart_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="C"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -58,48 +62,54 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_11"
         app:layout_constraintStart_toEndOf="@+id/button_clear"
-        app:layout_constraintTop_toBottomOf="@+id/button_coma"/>
+        app:layout_constraintTop_toBottomOf="@+id/button_coma" />
 
     <Button
         android:id="@+id/button_11"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_exponentiation"
         app:layout_constraintStart_toEndOf="@+id/button_10"
-        app:layout_constraintTop_toBottomOf="@+id/button_equals"/>
+        app:layout_constraintTop_toBottomOf="@+id/button_equals" />
 
     <Button
         android:id="@+id/button_exponentiation"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_margin_button"
+        android:text="^"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        android:text="^"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_11"
-        app:layout_constraintTop_toBottomOf="@+id/button_division"/>
+        app:layout_constraintTop_toBottomOf="@+id/button_division" />
 
     <Button
         android:id="@+id/button_8"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="8"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -110,30 +120,12 @@
         app:layout_constraintTop_toBottomOf="@+id/button_5" />
 
     <Button
-        android:id="@+id/button_1"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="@dimen/button_width"
-        android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart_button"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
-        android:fontFamily="sans-serif"
-        android:text="1"
-        android:textColor="@android:color/background_light"
-        android:textSize="@dimen/button_textSize"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button_4"
-        app:layout_constraintEnd_toStartOf="@+id/button_2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
         android:id="@+id/button_2"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
         android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="2"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -149,7 +141,8 @@
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
         android:layout_marginStart="@dimen/layout_marginStart_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="4"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -164,7 +157,8 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="5"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -180,7 +174,8 @@
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
         android:layout_marginStart="@dimen/layout_marginStart_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="7"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -196,7 +191,7 @@
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
         android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="3"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -211,7 +206,8 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="6"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -226,7 +222,8 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="9"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -242,12 +239,13 @@
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
         android:layout_marginStart="@dimen/layout_marginStart_button"
-        android:layout_marginBottom="@dimen/layout_marginBottomEnd_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="0"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button_clear"
         app:layout_constraintEnd_toStartOf="@+id/button_coma"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_7" />
@@ -257,13 +255,14 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_marginBottomEnd_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="."
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_equals"
+        app:layout_constraintBottom_toTopOf="@+id/button_10"
+        app:layout_constraintEnd_toStartOf="@id/button_equals"
         app:layout_constraintStart_toEndOf="@+id/button_0"
         app:layout_constraintTop_toBottomOf="@+id/button_8" />
 
@@ -272,12 +271,13 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_marginBottomEnd_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="="
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button_11"
         app:layout_constraintEnd_toStartOf="@+id/button_division"
         app:layout_constraintStart_toEndOf="@+id/button_coma"
         app:layout_constraintTop_toBottomOf="@+id/button_9" />
@@ -287,8 +287,8 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_margin_button"
         android:text="-"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -296,7 +296,7 @@
         app:layout_constraintBottom_toTopOf="@+id/button_division"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_9"
-        app:layout_constraintTop_toBottomOf="@id/button_multiplication" />
+        app:layout_constraintTop_toBottomOf="@+id/button_multiplication" />
 
     <Button
         android:id="@+id/button_plus"
@@ -304,8 +304,7 @@
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
         android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginEnd="@dimen/layout_margin_button"
         android:text="+"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -320,15 +319,15 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_margin_button"
         android:text="*"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button_minus"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/button_9"
+        app:layout_constraintStart_toEndOf="@+id/button_6"
         app:layout_constraintTop_toBottomOf="@+id/button_plus" />
 
     <Button
@@ -336,13 +335,13 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
-        android:layout_marginBottom="@dimen/layout_marginBottomEnd_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_margin_button"
         android:text="/"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button_exponentiation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_equals"
         app:layout_constraintTop_toBottomOf="@+id/button_minus" />
